2007-08-14  Lapo Calamandrei <calamandrei@gmail.com>

	* first batch of new emotes in, in 16x16, 22x22, 32x32 and scalable, 
		the rest is coming...

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.19.90 for release

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/accessories-character-map.png : added missing icon.

2007-08-13  Lapo Calamandrei <calamandrei@gmail.com>
	
	* 24x24/apps/accessories-character-map.png : added missing icon.
	* new media actions icons in all sizes plus various touch-ups here and
		there.

2007-08-03  Andreas Nilsson  <nisses.mail@home.se>

	* accessories-character-map: added, fixes bug #463122

2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.19.6 for release

2007-08-02  Jakub Steiner <jimmac@ximian.com>

	* emblem-cvs*: removed. The icons were meaningless, the name CVS
		specific, and generally version control emblem don't belong to a
		generic icon theme.
	* emblem-mail: based on Lapo's envelope.
	* emblem-default: more appealing shape.
	* emblem-urgent: addded missing sizes. candidate for removal though.

2007-08-02  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/net/stock_not-spam.png: remove.

2007-07-31  Lapo Calamandrei <calamandrei@gmail.com>

	* 24x24/actions/help-contents.png : forgot to add this one, sorry
		(fixes bug #462079).
	* {16x16,22x22}/categories/system-help.* : new icons.

2007-07-30  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/actions/help-contents.* : new icon, not sure about the
		metaphor 
	* actions/mail* : new mail related icons design, more to come.

2007-07-30  Jakub Steiner <jimmac@ximian.com>

	* 32x32/actions/Makefile.am
	* 24x24/stock/navigation/Makefile.am
	* 16x16/stock/navigation/Makefile.am
	* scalable/actions/Makefile.am: fix up makefiles to pass distcheck
	* scalable/actions/mail-message-new.svg: missing size

2007-07-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* */stock/navigation/stock_zoom-1.*: