@@ -1,3 +1,7 @@
+2007-08-15  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* renamed task-passed-due to task-past-due as in naming specs.
+
 2007-08-14  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* first batch of new emotes in, in 16x16, 22x22, 32x32 and scalable, 
